fix sidebar alignment

--- a/src/components/TabEditor/TabEditor.scss
+++ b/src/components/TabEditor/TabEditor.scss
@@ -4,7 +4,7 @@
     height: 320px;
     /* padding-top: 10px; */
     /* margin-top: 3vh; */
-    margin-left: 20px;
+    margin-left: 15px;
     width: 97%;
 }
 
@@ -168,7 +168,7 @@
 
 .tab-note-edit {
     position: absolute;
-    height: 80%;
+    height: 81%;
     margin-top: 36px;
     z-index: 3 !important;
 }
