--- a/src/components/Waveform/Waveform.scss
+++ b/src/components/Waveform/Waveform.scss
@@ -1,8 +1,8 @@
 .waveform-root {
     height: 316px;
-    margin-top: 15px;
+    margin-top: 24px;
     width: 97%;
-    margin-left: 20px;
+    margin-left: 15px;
 }
 
 #timeline {
